--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "filament/filament": "^3.0-stable",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "mokhosh/filament-kanban": "^2.8"
+        "mokhosh/filament-kanban": "^2.8",
+        "spatie/eloquent-sortable": "^4.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
